<resources>
    <string name="app_name">Arc</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="email">Email</string>
    <string name="title">Title</string>
    <string name="loading">Loading…</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
</resources>
